--- a/src/app/shared/component/dialog-common/dialog-common.component.scss
+++ b/src/app/shared/component/dialog-common/dialog-common.component.scss
@@ -1,7 +1,7 @@
 #container {
     display: flex;
     justify-content: center;
-    margin-top:5em;
+    margin-top:3.5em;
     flex-direction: column;
     .form_mat_field{
     margin-right: 1em;
@@ -9,5 +9,6 @@
 .button {
     display: flex;
     justify-content: center;
+    padding-top: 1em;
 }
 }
