--- a/src/app/components/films/films.component.html
+++ b/src/app/components/films/films.component.html
@@ -1,31 +1,31 @@
 
 <div id="container_title">
-    <h1 id="main_title">Retrouvez vos livres préférés!</h1>
+    <h1 id="main_title">Retrouvez vos Films et séries préférés</h1>
 </div> 
 <div id="container">
   <form [formGroup]="formGroup">
     <mat-form-field class="form_mat_field">
-      <input matInput formControlName="title"  placeholder="titre" required>
+      <input matInput formControlName="title" placeholder="titre" required>
       <mat-error>
-          {{formGroup.controls['title']['errorMessage'] }}
+        Ce champs est obligaoire et requiert 2 caratères minimum
       </mat-error>
     </mat-form-field>
 
     <mat-form-field class="form_mat_field">
-        <input matInput type="number" formControlName="dateBegin" placeholder="année de sortie minimum">
+        <input matInput type="number" formControlName="dateBegin" placeholder="Année de sortie minimum">
         <mat-error>
-            {{formGroup.controls['dateBegin']['errorMessage'] }}
+            Requis: 4 chiffres minimum, exemple: 1972
         </mat-error>  
       </mat-form-field>
  
 
-    <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid" (click)="find(form.value)">Rechercher</button>
+    <button type="submit" mat-raised-button color="primary" [disabled]="formGroup.invalid" (click)="find(formGroup.value)">Rechercher</button>
   </form>
 </div>
 
-<div *ngIf="ELEMENT_DATA.length > 0">
+<div *ngIf="dataSource.length > 0">
     <div id="container_table">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <table mat-table #matTable [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="originalTitle">
             <th mat-header-cell *matHeaderCellDef> Titre </th>
             <td mat-cell *matCellDef="let element"> {{ element.primaryTitle}} </td>
