--- a/src/app/components/films/films.component.scss
+++ b/src/app/components/films/films.component.scss
@@ -5,23 +5,21 @@
 display: flex;
 justify-content: center;
 margin-top:5em;
+margin-bottom: 2em;
 .form_mat_field{
 margin-right: 1em;
-}
+    }
 }
 #container_table{
     display: flex;
     justify-content: center;
     table {
         width: 80%
-    
      }
 }
-
 #container_filter {
     padding-left: 10em;
     .mat_field{
-        margin-right: 1em;
-        }
-    
+     margin-right: 1em;
+    } 
 }
